samples/_failures_safe/1761434846_515ee1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bdd5122.c: In function ‘main’:
./samples/SAFE/__tmp_2bdd5122.c:125:9: error: expected expression at end of input
  125 |         if (
      |         ^~
./samples/SAFE/__tmp_2bdd5122.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bdd5122.c:125:9: error: expected declaration or statement at end of input
